proceed button left alignment fix

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1246,6 +1246,7 @@ md-dialog.fullscreen-dialog {
     position: fixed;
     width: 100%;
     bottom: 0;
+    left: 0;
     max-width: 900px;
     margin-left: -0.5em;
 }
